<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.m3ts.tracker.visualization.replay.ReplayActivity"
    android:keepScreenOn="true">

    <include layout="@layout/camera_and_tracks_surface_views" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/play_stop_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/play_button_text" />

        <Spinner
            android:id="@+id/playMovieFile_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/play_stop_button"
            android:layout_alignTop="@id/play_stop_button"
            android:layout_toEndOf="@id/play_stop_button" />

        <include layout="@layout/debug_info" />

        <include layout="@layout/debug_score_layout" />
    </RelativeLayout>
</merge>