<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:keepScreenOn="true">
    <include layout="@layout/camera_surface_view" />
    <SurfaceView
        android:id="@+id/playMovie_surfaceTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#00FFFFFF" />
    <SurfaceView
        android:id="@+id/playMovie_surfaceTracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#00FFFFFF" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <SurfaceView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/playMovie_replaySurface"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</FrameLayout>