<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/radius_background"
        android:columnCount="1"
        android:padding="20dp"
        android:rowCount="5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Match Type"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/init_spinnerSelectMatchType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#1A237E"
            android:spinnerMode="dialog"
            android:textColor="@android:color/secondary_text_light" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Serving Side"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/init_spinnerSelectServingSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/secondary_text_light" />

        <Button
            android:id="@+id/init_sideAndMatchTypeDoneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Done"
            android:layout_marginBottom="8dp"/>

    </GridLayout>



</RelativeLayout>