...
            android:textSize="18sp"
            android:text="@string/initCornersSelectedLabel"
            android:textColor="@color/primary_light"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/init_cornersSelectedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@color/primary_light"
...
            android:text="/"
            android:textColor="@color/primary_light"
            android:textStyle="bold"
            android:layout_toEndOf="@id/init_cornersSelectedTxt" />

        <TextView
            android:id="@+id/init_cornersSelectedMaxTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="18sp"
            android:text="4"
            android:textColor="@color/primary_light"
...
